--- a/week1-tasks/styles.css
+++ b/week1-tasks/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .swipe {
-    font-size: 14px;
+    font-size: 13px;
     margin-top: 10px;
     color: #666;
 }
@@ -61,18 +61,45 @@ body {
     font-size: medium;
 }
 
-.quote-wrapper button {
+.search {
+    margin-top: 1rem;
+    position: relative;
     display: inline-block;
-    background-color: transparent;
-    border: 2px solid var(--first-color);
-    color: #000;
-    padding: .75rem 1rem;
-    border-radius: .5rem;
-    font-size: medium;
-    font-weight: 500;
-    transition: .4s;
 }
 
-.quote-wrapper button:hover {
+#search-author {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    padding-right: 60px;
+    outline: none;
+    font-size: 16px;
+}
+
+#search {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    border: 2px solid var(--first-color);
+    border-radius: 20px;
+    padding: 0 20px;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#search:hover {
     background-color: var(--first-color-alt);
+}
+
+#search img {
+    width: 30px;
+    height: 30px;
 }
