--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ body {
     border-radius: 20px;
     padding: 4rem 1.5rem;
     box-shadow: 0px 2px 15px -5px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
 }
 
 .swipe {
@@ -65,6 +67,8 @@ body {
     margin-top: 1rem;
     position: relative;
     display: inline-block;
+    width: 100%;
+    max-width: 400px;
 }
 
 #search-author {
@@ -74,6 +78,8 @@ body {
     padding-right: 60px;
     outline: none;
     font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #search {
@@ -102,4 +108,49 @@ body {
 #search img {
     width: 30px;
     height: 30px;
+}
+
+@media (max-width: 768px) {
+    .quote-wrapper {
+        padding: 3rem 1rem;
+    }
+
+    body {
+        font-size: 1rem;
+        padding: 1.5rem;
+    }
+
+    .search {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .quote-wrapper {
+        padding: 2rem 1rem;
+    }
+
+    body {
+        font-size: 0.9rem;
+        padding: 1rem;
+    }
+
+    .search {
+        max-width: 90%;
+    }
+
+    #search-author {
+        padding-right: 50px;
+        font-size: 14px;
+    }
+
+    #search {
+        font-size: 14px;
+        padding: 0 15px;
+    }
+
+    #search img {
+        width: 25px;
+        height: 25px;
+    }
 }
